--- a/index.html
+++ b/index.html
@@ -3,24 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda de Muebles</title>
+    <title>Ecommerce - Home</title>
+
+        <!-- Normalizacion CSS: Debe ir primero que nuestros estilos -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <!-- Código CSS: Cargar archivo -->
+    <link rel="stylesheet" href="css/app.css">
+
+
+    <!-- Código CSS: Forma no tan usada -->
+    <!-- <style>
+        h1 {
+            font-size: 20px;
+            color: blue;z
+        }
+    </style> -->
 </head>
 <body>
     <header>
-        <h1>Tienda Muebles</h1>
+        <h1 class="nombre-sitio">Tienda <span>Muebles</span></h1>
     </header>
 
-    <nav>
-        <a href="./index.html">Inicio</a>
-        <a href="./nosotros.html">Nosotros</a>
-        <a href="./tienda.html">Tienda</a>
-        <a href="./blog.html">Blog</a>
-        <a href="./galeria.html">Galería</a>
-        <a href="./contacto.html">Contacto</a>   
-    </nav>
+    <div class="contenedor-navegacion">
+        <nav class="nav-principal contenedor">
+            <a href="./index.html">Inicio</a>
+            <a href="./nosotros.html">Nosotros</a>
+            <a href="./tienda.html">Tienda</a>
+            <a href="./blog.html">Blog</a>
+            <a href="./galeria.html">Galería</a>
+            <a href="./contacto.html">Contacto</a>   
+        </nav>
+    </div>
+
+    <div class="hero"></div>
 
     <section>
-        <h2>Categorías de Productos</h2>
+        <h2>Categorías de <span>Productos</span></h2>
 
         <div>
             <img src="./img/categoria1.jpg" alt="Imagen Categoría" />
@@ -38,7 +56,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="sobre-nosotros">
         <div>
             <h2>Sobre Nosotros</h2>
             
@@ -143,7 +161,7 @@
         <div>
             <h3>Categorías</h3>
 
-            <nav>
+            <nav class="navegacion">
                 <a href="#">Cocina</a>
                 <a href="#">Oficina</a>
                 <a href="#">Jardín</a>
@@ -155,19 +173,23 @@
         <div>
             <h3>Sobre Nosotros</h3>
 
-            <a href="#">Nuestra Historia</a>
-            <a href="#">Misión, Visión y Valores</a>
-            <a href="#">Carreras</a>
-            <a href="#">Política de Privacidad</a>
-            <a href="#">Términos del Servicio</a>
+            <nav class="navegacion">
+                <a href="#">Nuestra Historia</a>
+                <a href="#">Misión, Visión y Valores</a>
+                <a href="#">Carreras</a>
+                <a href="#">Política de Privacidad</a>
+                <a href="#">Términos del Servicio</a>
+            </nav>
         </div>
 
         <div>
             <h3>Soporte</h3>
 
-            <a href="#">Preguntas Frecuentes</a>
-            <a href="#">Ayuda en línea</a>
-            <a href="#">Confianza y Seguridad</a>
+            <nav class="navegacion">
+                <a href="#">Preguntas Frecuentes</a>
+                <a href="#">Ayuda en línea</a>
+                <a href="#">Confianza y Seguridad</a>
+            </nav>
         </div>
 
         <p>Todos los derechos Reservados, TiendaMuebles</p>
